Gramatica_geral_LL1_+_exp_LL1.tex
Program ->   Definition * .
Definition ->    Struct |   Statements |   Function .
Struct ->    struct id_token { Instantiations } .
Instantiations -> Instantiation FInstantiation .
FInstantiation -> ; F2 .
F2 -> Instantiations | \epsilon.
Instantiation -> var id_token Matrix .
Assign ->    Assign1 ; .
Assign1 ->   Assignment |   Instantiation .
Function ->  fun id_token ( Function1 ) Block .
Function1 -> Function_argument |   \epsilon .
Function_argument -> id_token Fid_token .
Fid_token -> \epsilon |   , Function_argument .
Statements -> Statement Statements | \epsilon .
Statement -> If_block | For_block |   While_block |   Assign |   Return_expr |   Print |   Read .
Assignment ->    id_token Fid_token1 .
Fid_token1 ->    = Fassign |   -= Fsubassign |   += Fsubassign |   *= Fsubassign |   /= Expression |   ++ |   -- | ( ARGUMENTS ) ; .
Fassign ->   Expression |   Matrix_line .
Matrix_line ->   { ELEMENTS } .
ELEMENTS ->  ELEMENT FELEMENT .
FELEMENT ->  \epsilon |   , ELEMENTS .
ELEMENT ->   Expression |   Matrix_line .
Block -> { Statements } .
Return_expr ->   return ( Expression ) ; .
For_block -> for Ffor .
Ffor ->  ( F1 .
F1 ->    var id_token ; Expression ; Assignment ) Block |   \epsilon ; Expression ; Assignment ) Block .
If_block ->  if ( Expression ) Block .
While_block ->   while ( Expression ) Block .
ARGUMENTS -> Expression FExpression .
FExpression -> \epsilon |   , ARGUMENTS .
Matrix ->    [ Expression ] Dim | \epsilon.
Dim ->   [ Expression ] |   \epsilon .
Print -> print ( Expression ) ; .
Read ->  read ( id_token ) ; .
Expression ->    TLog Expression1 .
Expression1 ->   or TLog Expression1 | \epsilon    .
TLog ->  FLog TLog1 .
TLog1 -> and FLog TLog1 | \epsilon    .
FLog ->  ~ ERel |   ERel .
ERel ->  LRel FLRel .
FLRel -> == LRel | \epsilon    .
LRel ->  LERel FLERel .
FLERel ->    < LERel | \epsilon    .
LERel -> GRel FGRel .
FGRel -> \leq GRel | \epsilon    .
GRel ->  GERel FGERel .
FGERel ->    > GERel | \epsilon    .
GERel -> DRel FDRel .
FDRel -> \geq DRel | \epsilon    .
DRel ->  AOp FAOp .
FAOp ->  \neq AOp | \epsilon    .
AOp ->   SOp AOp1 .
AOp1 ->  = SOp AOp1 | \epsilon    .
SOp ->   MOp SOp1 .
SOp1 ->  - MOp SOp1 | \epsilon    .
MOp ->   DOp MOp1 .
MOp1 ->  mult DOp MOp1 | \epsilon    .
DOp ->   EOp DOp1 .
DOp1 ->  / EOp DOp1 | \epsilon    .
EOp ->   MeUn FMeUn .
FMeUn -> ^ EOp | \epsilon    .
MeUn ->  - MaUn |   MaUn .
MaUn ->  = Zer |   Zer .
Zer ->   zero( Id ) |   Id .
Id ->    identity( Inv ) |   Inv .
Inv ->   inverse( Tra ) |   Tra .
Tra ->   transpozed( Bra ) .
Bra ->   ( Var ) | Var .
Var ->   id_token | literal .
